[package]
name = "dsa-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Benchmarks for DSA implementations"
publish = false

[dependencies]
dsa-data-structures = { path = "../dsa-data-structures" }
dsa-algorithms = { path = "../dsa-algorithms" }
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "data_structures"
harness = false

[[bench]]
name = "algorithms"
harness = false
